--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint" : "eslint src/* --ext .js --ext .jsx"
+    "lint": "eslint src/* --ext .js --ext .jsx",
+    "test": "jest"
   },
   "dependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
+    "@babel/preset-env": "^7.17.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.0",
     "vite": "^2.9.7"
   }
 }
