--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.0",
+    "sass": "^1.52.0",
     "vite": "^2.9.7"
   }
 }
